objects/dfsle__CustomParameterMap__c.object
<CustomObject>
    <fields>
        <fullName>dfsle__EnvelopeConfiguration__c</fullName>
        <description>DocuSign Envelope Configuration</description>
        <inlineHelpText>DocuSign Envelope Configuration</inlineHelpText>
        <label>DocuSign Envelope Configuration</label>
        <referenceTo>dfsle__EnvelopeConfiguration__c</referenceTo>
        <relationshipName>CustomParameterMap</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dfsle__Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__SubValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SubValue</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>DocuSign Custom Parameter Map</label>
    <nameField>
        <displayFormat>CPM{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Custom Parameter Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>